--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 flask_app = run.pv
 flask_env = devlopment
 database_url = HmfyLVtz-LhEDsBEDEWRd7DmtSCqCr3d@salt.db.elephantsql.com/zbfmmdwp
+database_url=sqlite:///pokemon.db
